[package]
name = "rocket-demo-app"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "say_hello"
path = "src/lib.rs"

[dependencies]
rocket = "0.4.7"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }